# jij-bot

./: .gitignore  README.md  make-icon.js  package-lock.json  package.json
apps/android/: capacitor.config.ts  index.html  package.json  tsconfig.json  vite.config.ts
apps/android/android/: .gitignore  build.gradle  capacitor.settings.gradle
apps/android/android/app/: build.gradle  capacitor.build.gradle
apps/android/android/app/src/main/: AndroidManifest.xml
apps/android/android/app/src/main/java/com/jijbot/android/: BotWorker.kt  BotWorkerPlugin.kt  EncryptedKeyStorePlugin.kt  MainActivity.java
apps/android/android/app/src/main/res/values/: ic_launcher_background.xml  strings.xml
apps/android/src/: App.tsx  AuthGate.tsx  OnboardingCard.tsx  index.css
apps/android/src/platform/: backgroundWorker.ts  index.ts  localWallet.ts  notify.ts  secureKeyStore.ts  storage.ts  wallet.ts
apps/desktop/: index.html  package.json  tailwind.config.js  vite.config.ts
apps/desktop/src/: App.tsx  AuthGate.tsx  index.css  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/nsis/: installer.nsi  installer_hooks.nsh
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/platform/: index.ts  localWallet.ts  notify.ts  secureKeyStore.ts  storage.ts  wallet.ts
assets/: design.config.json
cloudflare-worker/: worker.js  wrangler.toml
scripts/: gen-icon.mjs  gen-pdfs.mjs
